fix cookie
